UI-3229 [Calendar] Alignment Bugs on some screens

--- a/calendar-webapp/src/main/webapp/skin/less/Sprites/Style.less
+++ b/calendar-webapp/src/main/webapp/skin/less/Sprites/Style.less
@@ -120,7 +120,7 @@
 }
 
 .uiIconCalPlus,.uiIconCalSimplePlus{
-	background-position: 0 -19px;
+	background-position: 0 -20px;
 }
 
 .uiIconCalRefresh{
